[package]
name = "window-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
inquire = { version = "0.7.5" }

[target."cfg(windows)".dependencies.windows]
version = "0.39.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]
